Fix: change /login to use POST instead of GET
